jena-shex/src/test/files/spec/negativeSyntax/literal-0x123.shex
# bad literal 0x123
# source: turtle-syntax-bad-num-04.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> [0x123]
}
